--- a/_posts/2019-10-14-JAVA 03 - 자바 기본(2).markdown
+++ b/_posts/2019-10-14-JAVA 03 - 자바 기본(2).markdown
@@ -70,7 +70,7 @@ Class Person{
 
 String 객체를 생성하는 방법은 2가지가 있다.
 
-  1) 리터럴을 이용하는 방식.
+  1) 리터럴을 이용하는 방식.<br>
   2) new 연산자를 이용하는 방식.
 
 두 가지 방법의 차이는 무엇일까?
@@ -132,5 +132,5 @@ Class Main{
 
 ```
 
-ref. https://www.journaldev.com/797/what-is-java-string-pool
+ref. https://www.journaldev.com/797/what-is-java-string-pool<br>
 ref. https://medium.com/@joongwon/string-%EC%9D%98-%EB%A9%94%EB%AA%A8%EB%A6%AC%EC%97%90-%EB%8C%80%ED%95%9C-%EA%B3%A0%EC%B0%B0-57af94cbb6bc
