10/10, 10/14 포스팅 <br> 추가

--- a/_posts/2019-10-10-JAVA 01 - 캡슐화와 은닉화.markdown
+++ b/_posts/2019-10-10-JAVA 01 - 캡슐화와 은닉화.markdown
@@ -106,9 +106,9 @@ categories: JAVA
 
 ```
 
-사용자 입장에서 getBalance()만 호출하면 나라별 환율에 맞는 잔액을 알 수 있다.
-    1) 국가가 추가되는 경우
-    2) 환율이 변동하는 경우를 신경쓸 필요가 없으므로
+사용자 입장에서 getBalance()만 호출하면 나라별 환율에 맞는 잔액을 알 수 있다.<br>
+    1) 국가가 추가되는 경우<br>
+    2) 환율이 변동하는 경우를 신경쓸 필요가 없으므로<br>
 추후에 변경사항이 생기더라도 Account 클래스 내부만 수정하면 된다.
 
 따라서 결합도를 낮추고 코드의 재사용성을 높일 수 있다는 장점이 있다.
